tests/negative/AppLeftImplicit.juvix
module AppLeftImplicit;

x : Type := {x};

